[gd_scene load_steps=8 format=2]

[ext_resource path="res://PlayerGreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://lvl4/CollisionShape2D.gd" type="Script" id=2]
[ext_resource path="res://assets/debug.png" type="Texture" id=3]
[ext_resource path="res://lvl4/RigidBody2D.gd" type="Script" id=4]
[ext_resource path="res://PlayerBlue.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 135, 10 )

[node name="Node2D" type="Node2D"]

[node name="PlayerGreen" parent="." instance=ExtResource( 1 )]
position = Vector2( 391.058, 373.079 )

[node name="PlayerBlue" parent="." instance=ExtResource( 5 )]
position = Vector2( 500.685, 371.505 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 400, 449.013 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )
disabled = true

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 400, 449.013 )
script = ExtResource( 4 )

[node name="PinJoint2D" type="PinJoint2D" parent="RigidBody2D"]
node_a = NodePath("..")
node_b = NodePath("../../StaticBody2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="RigidBody2D/CollisionShape2D"]
scale = Vector2( 270, 20 )
texture = ExtResource( 3 )
[connection signal="jump" from="PlayerGreen" to="RigidBody2D" method="_on_PlayerGreen_jump"]
