[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/debug.png" type="Texture" id=1]
[ext_resource path="res://lvl4/RigidBody2D.gd" type="Script" id=2]
[ext_resource path="res://lvl4/CollisionShape2D.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 135, 10 )

[node name="PinkSeeSaw" type="RigidBody2D"]
position = Vector2( 400, 449.013 )
contacts_reported = 3
contact_monitor = true
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="PinJoint2D" type="PinJoint2D" parent="Node2D"]
node_a = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D"]
shape = SubResource( 1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Node2D/CollisionShape2D"]
scale = Vector2( 270, 20 )
texture = ExtResource( 1 )
